--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -1,11 +1,19 @@
 body {
+    min-height: 500px;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
     background-color: #f0f0f0;
+    margin: 0;
 }
+
+html, body {
+    min-height: 600px;
+    height: 100vh;
+}
+
+
 
 .login {
     width: 80vh;
@@ -52,19 +60,148 @@ body {
     padding: 0 1vh;
 }
 
-#btnEntrar {
-    width: 32vh;
-    height: 4vh;
-    border-radius: 5px;
-    border: 1px solid black;
-    font-size: 1.5vh;
-    background-color: #000000;
-    color: #ffffff;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-top: 1vh;
-    cursor: pointer;
+  #btnEntrar {
+      width: 100%;
+      max-width: 300px;
+      height: 40px;
+      border-radius: 5px;
+      border: 1px solid black;
+      font-size: 16px;
+      background-color: #000000;
+      color: #ffffff;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+      margin-top: 10px;
+      cursor: pointer;
+  }
+  
+
+
+@media screen and (min-width: 10px) and (max-width: 768px) {
+    .login {
+        width: 100%;
+        padding: 1vh;
+        height: 50vh;
+    }
+
+    .campo-login{
+        width: 80%;
+        height: 5vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 2vh;
+        font-size: 1.3vh;
+    }
+
+    #btnEntrar{
+        width: 100%;
+        max-width: 300px;
+        height: 40px;
+        border-radius: 5px;
+        border: 1px solid black;
+        font-size: 16px;
+        background-color: white;
+        color: #ffffff;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        margin-top: 10px;
+        cursor: pointer;
+    }
+    
 }
 
-#btnEntrar:hover {
-    background-color: #333333;
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .login {
+        width: 50vw;
+        padding: 1vh;
+        height: 50vh;
+    } 
+    
+    .campo-login{
+        width: 70%;
+        height: 5vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 2vh;
+    }
+
+    #btnEntrar{
+        width: 100%;
+        width: 100vw;
+        height: 40px;
+        border-radius: 5px;
+        border: 1px solid black;
+        font-size: 16px;
+        background-color: white;
+        color: #ffffff;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        margin-top: 10px;
+        cursor: pointer;
+    }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1440px) {
+    .login {
+        width: 50vw;
+        padding: 1vh;
+        height: 50vh;
+    }   
+
+    .campo-login{
+        width: 50%;
+        height: 5vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 2vh;
+    }
+
+    #btnEntrar{
+        width: 100%;
+        width: 100vw;
+        height: 40px;
+        border-radius: 5px;
+        border: 1px solid black;
+        font-size: 16px;
+        background-color: white;
+        color: #ffffff;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        margin-top: 10px;
+        cursor: pointer;
+    }
+}
+
+@media screen and (min-width: 1441px) and (max-width: 76008px) {
+    .login {
+        width: 30w;
+        padding: 1vh;
+        height: 50vh;
+    }   
+
+    .campo-login{
+        width: 50%;
+        height: 5vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 2vh;
+    }
+
+        #btnEntrar{
+        width: 100%;
+        width: 100vw;
+        height: 40px;
+        border-radius: 5px;
+        border: 1px solid black;
+        font-size: 16px;
+        background-color: white;
+        color: #ffffff;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        margin-top: 10px;
+        cursor: pointer;
+    }
 }
