Criado método para formatar a data no Contas e ajustado para carregar a data da conta na tela Ajustado para ao clicar em sair limpar o localStorage e ir para o login Ajustado para carregar o id do usuario ao logar e buscar Ajustes na tela Home

--- a/src/Telas/Contas/Contas.css
+++ b/src/Telas/Contas/Contas.css
@@ -181,7 +181,11 @@
       height: 80vh; /* Ajusta a altura para ocupar mais da tela */
     }
   
-    .input, .button {
+    .input, .button{
+      font-size: 14px;
+    }
+
+    label{
       font-size: 14px;
     }
   
