--- a/src/Telas/Home/MenuSuspenso.css
+++ b/src/Telas/Home/MenuSuspenso.css
@@ -6,30 +6,40 @@
     border: 1px solid #ddd;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    width: 150px;
+    width: 100%;
 }
 
-.menu-suspenso ul {
+.menu-list {
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
-.menu-suspenso li {
-    padding: 10px;
+.menu-list li {
+    padding: 12px 16px;
+    cursor: pointer;
     border-bottom: 1px solid #eee;
 }
 
-.menu-suspenso li:last-child {
+.menu-list li:last-child {
     border-bottom: none;
 }
 
-.menu-suspenso li a {
-    text-decoration: none;
-    color: #333;
-    display: block;
+.menu-list li:hover {
+    background-color: #f5f5f5;
 }
 
-.menu-suspenso li:hover {
-    background: #f4f4f4;
+.menu-suspenso i {
+    margin-right: 10px;
+    width: 20px;
+    text-align: center;
+    color: #6e8efb;
+}
+
+.menu-suspenso .logout-item {
+    color: #e74c3c;
+}
+
+.menu-suspenso .logout-item i {
+    color: #e74c3c;
 }
