--- a/src/Telas/Login/Login.css
+++ b/src/Telas/Login/Login.css
@@ -14,6 +14,21 @@ html, body {
     padding: 0;
 }
 
+.close-button {
+    margin-top: 10px;
+    padding: 5px 15px;
+    background-color: #f44336;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .close-button:hover {
+    background-color: #d32f2f;
+  }
+  
+
 .login {
     width: 80vh;
     height: 100vh;
