--- a/src/Telas/Util/Dashboard.css
+++ b/src/Telas/Util/Dashboard.css
@@ -1,11 +1,9 @@
 .dashboard {
     width: 100%;
-    height: auto; 
+    padding: 20px;
+    box-sizing: border-box;
+    height: auto;
     min-height: 100%;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 50px;
-    flex: 1; 
 }
 
 .dashboard-title {
@@ -15,14 +13,23 @@
 }
 
 .chart-container {
-    flex: 1;
-    min-height: 500px;
-    padding: 20px;
+    width: 100%;
+    height: 500px; 
+    margin-bottom: 20px;
 }
 
 .additional-content {
-    padding: 20px;
-    margin-top: 20px;
+    padding: 10px;
+    margin-bottom: 30px; 
+}
+
+.additional-content ul {
+    padding-left: 20px;
+    margin-bottom: 20px;
+}
+
+.additional-content li {
+    margin-bottom: 10px;
 }
 
 @media (max-width: 768px) {
@@ -37,12 +44,16 @@
     }
     
     .chart-container {
-        min-height: 400px;
+        height: 400px;
     }
 }
 
 @media (max-width: 480px) {
     .chart-container {
-        min-height: 300px;
+        height: 300px;
+    }
+    
+    .additional-content {
+        padding: 5px;
     }
 }
