--- a/src/Telas/Home/Home.css
+++ b/src/Telas/Home/Home.css
@@ -19,7 +19,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 200px;
+      height: 150px;
       z-index: 100;
       padding: 20px;
       box-sizing: border-box;
@@ -116,7 +116,7 @@
 
   .dashboard-container {
       position: fixed;
-      top: 240px; 
+      top: 18vh; 
       left: 0;
       right: 0;
       bottom: 0;
@@ -214,7 +214,7 @@
 
   @media (max-width: 768px) {
       .header {
-          height: 180px;
+          height: 140px;
       }
     
       .welcome-text h1 {
@@ -226,7 +226,7 @@
       }
     
       .dashboard-container {
-          top: 220px;
+          top: 20px;
           height: calc(100vh - 220px);
       }
   }
@@ -250,7 +250,7 @@
       }
     
       .dashboard-container {
-          top: 260px;
+          top: 170px;
           height: calc(100vh - 260px);
       }
   }
