--- a/src/Telas/Util/Dashboard.css
+++ b/src/Telas/Util/Dashboard.css
@@ -1,6 +1,6 @@
 .dashboard {
     width: 100%;
-    padding: 20px;
+    padding: 20px;    
     box-sizing: border-box;
     height: auto;
     min-height: 100%;
@@ -14,14 +14,39 @@
 }
 
 .chart-container {
+    margin-top: -8vh;
     width: 100%;
-    height: 500px; 
+    height: 500px;
+}
+
+#btnAtualizar {
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    height: 40px;
+    border-radius: 5px;
+    background-color: black;
+    color: white; 
     margin-bottom: 20px;
 }
+
+#btnAtualizar:hover {
+    background-color: #333;
+}
+
+li{
+    list-style-type: none;
+    font-family: sans-serif;
+    margin: 10px;
+}
+
 
 .additional-content {
     padding: 10px;
     margin-bottom: 60px; 
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
 }
 
 .additional-content ul {
